--- a/content/modules/ROOT/pages/index.adoc
+++ b/content/modules/ROOT/pages/index.adoc
@@ -4,7 +4,9 @@ Welcome to {lab_name}
 
 *Ansible Automation Platform* has the abiity to automate and extend tools that are currently used in organizations. This is important as it means that you can integrate technologies that you are already using and have invested time and skills in. Using Ansible Automation Platform as a central automation platform to use these tools can extend their scope and improve their usage in your team. Use Ansible Automation Platform as a force multiplier to get more value from tools you already have throughout your organization!
 
-The goal of this lab is to illustrate how **Ansible Automation Platform** can help you automate common day-2 cloud operations tasks across cloud.  Our focus here will be on public cloud (Microsoft Azure), but the use cases here are ones you can extend across the hybrid cloud.
+The goal of the challenges in this lab are to guide you how **Ansible Automation Platform** can help you with some basic optimization exercises that can help tame your cloud.
+
+Our focus here will be on public cloud (Microsoft Azure), but the use cases here are ones you can extend across the hybrid cloud.
 
 image:https://github.com/IPvSean/pictures_for_github/blob/master/ansible-for-azure-infrastructure-visibility/diagram.png?raw=true[]
 
